style: fixed uneven focus border

--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -235,7 +235,7 @@
           display: block;
         }
         input:focus {
-          border: 2px solid #0085f2 !important;
+          border: 1px solid #0085f2 !important;
           outline: none;
         }
 
@@ -245,18 +245,18 @@
           width: 100%;
           border: 1px solid #b2b0b0;
           &:focus {
-            border: 2px solid #0085f2 !important;
+            border: 1px solid #0085f2 !important;
           }
         }
         .message-field {
           max-width: 100%;
           outline: none;
           &:focus {
-            border: 2px solid #0085f2 !important;
+            border: 1px solid #0085f2 !important;
           }
         }
         .field-error {
-          border: 2px solid #e14e1d;
+          border: 1px solid #e14e1d;
         }
       }
       .form-btn-wrapper {
@@ -305,7 +305,7 @@
       z-index: -1;
     }
     .contact-section {
-      margin-top: 30em;
+      margin-top: 20em;
       .blob-sm-wrapper {
         display: block;
         position: absolute;
@@ -473,9 +473,14 @@
       margin: 0 auto;
       max-width: 1200px;
       .webgl {
-        height: 500px !important;
+        height: 400px !important;
         grid-column-start: 5;
         grid-column-end: 9;
+        .img {
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+        }
       }
       .project-content {
         grid-column-start: 9;
